related ot #1415 fixed invisible line

--- a/admin/themes/default/theme.css
+++ b/admin/themes/default/theme.css
@@ -5213,8 +5213,6 @@ color:#FF7B00;
 }
 
 .line {
-  background: #fafafa;
-
   display: flex;
   flex-direction: row;
 
